Footer fixed and made less visible

--- a/public/css/layout/default.css
+++ b/public/css/layout/default.css
@@ -71,7 +71,8 @@ th, td {
 }
 
 .footer {
-    font-style: italic;
+    display: none;
     text-align: center;
     font-size: 0.8em;
+    font-style: italic;
 }
